# NUCLEO-F401RE

./: README.md
Firmware/NUCLEO-F401RE/: .mxproject  CMakeCache.txt  CMakeLists.txt  NUCLEO-F401RE.ioc  build.ninja  cmake_install.cmake  compile_commands.json
Firmware/NUCLEO-F401RE/Core/Inc/: main.h
Firmware/NUCLEO-F401RE/Core/Src/: gpio.c  main.c
Firmware/NUCLEO-F401RE/EWARM/: NUCLEO-F401RE.ewd  NUCLEO-F401RE.ewp  Project.eww
Firmware/NUCLEO-F401RE/Hardware/: hw.c  hw.h
Firmware/NUCLEO-F401RE/Hardware/Component/: hw_gpio.c  hw_uart.c
Firmware/NUCLEO-F401RE/Hardware/Component/Include/: hw_gpio.h  hw_uart.h
Firmware/NUCLEO-F401RE/cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
NUCLEO-F401RE/: CMakeCache.txt  CMakeLists.txt  NUCLEO-F401RE.ioc  build.ninja  cmake_install.cmake  compile_commands.json
NUCLEO-F401RE/Core/Src/: main.c
NUCLEO-F401RE/cmake/stm32cubemx/: cmake_install.cmake
